--- a/rocketlaunchtui.cabal
+++ b/rocketlaunchtui.cabal
@@ -16,6 +16,8 @@ extra-source-files:  README.md
 
 executable rocketlaunchtui
   hs-source-dirs:      src
+  ghc-options:         -threaded
   main-is:             Main.hs
   default-language:    Haskell2010
-  build-depends:       base >= 4.7 && < 5
+  build-depends:       base >= 4.7 && < 5,
+                       brick
